--- a/.github/workflows/push-github-actions.yml
+++ b/.github/workflows/push-github-actions.yml
@@ -7,8 +7,10 @@ on:
     branches: [ main ]
 
 jobs:
-  build_and_test:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
@@ -16,6 +18,21 @@ jobs:
         with:
           node-version: '14.x'
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build
-      - run: npm run test:coverage
+      - name: npm install, build, and test using Node.js
+        run: |
+          npm install
+          npm run build --if-present
+          npm run test:coverage
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-without-markdown
+          path: |
+            build
+            !build/**/*.md
+          retention-days: 5
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-report
+          path: coverage/lcov-report/index.html
